# Learning-Guided-Control

./: .gitignore  CMakeLists.txt  README.md  mppi_profile.prof  package.xml
config/: config_PP.yaml  config_example.yaml
config/levine/: levine_centerline.csv  levine_raceline.csv
gym/: requirements.txt
gym/f1tenth_gym/envs/: f110_env.py  observation.py
gym/f1tenth_gym/envs/rendering/: __init__.py  renderer.py  rendering_pygame.py  rendering_pyqt.py
gym/f1tenth_gym/envs/track/: track.py  utils.py
gym/maps/: random_trackgen.py
gym/maps/levine/: levine_raceline.csv
gym/maps/lup/: lup_centerline.csv  lup_map.pgm  lup_map.yaml  lup_raceline.csv  lup_raceline_pp.csv
gym/maps/race3/: race3_centerline.csv  race3_map.pgm  race3_map.yaml  race3_raceline.csv  race3_raceline_pp.csv
gym/ppo/: __init__.py  eval.py  export.py  learn.py  rl_env.py  utils.py
gym/ppo/exp_cfgs/: clean.yml  debug.yml  default.yml  eval.yml  multi_test.yml  obs.yml  recurrent.yml
install/: local_setup.sh  setup.sh
install/mppi_control/lib/mppi_control/: infer_env.py  mppi_PP.py  mppi_tracking.py  pure_pursuit_node.py  trajectory_error_evaluator.py
install/mppi_control/share/ament_index/resource_index/package_run_dependencies/: mppi_control
install/mppi_control/share/ament_index/resource_index/parent_prefix_path/: mppi_control
install/mppi_control/share/mppi_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mppi_control/share/mppi_control/launch/: mppi_PP.py  mppi_example.py
launch/: mppi_PP.py  mppi_example.py  mppi_rl.py
log/: latest_build
rl_models/: levine_3ms_dt_025_270_xy_vx.onnx  levine_4ms.onnx  levine_4ms_540.onnx  levine_540_4ms_t-025.onnx  out.onnx
scripts/: infer_env.py  mppi_PP.py  mppi_node.py  mppi_node_og.py  mppi_tracking.py  obs.py  pure_pursuit_node.py  rl_node.py  vis_node.py
scripts/dynamics_models/: mb_model_params.py
scripts/utils/: cubic_spline.py
waypoints/: map_info_og.txt
waypoints/levine/: centerline.csv  levine.csv
waypoints/levine_zirui/: levine_2.csv
waypoints/race3/: centerline.csv  opt_traj.csv
