<?xml version="1.0"?>
<package format="3">
  <name>mppi_control</name>
  <version>0.1.0</version>
  <description>A hierarchical control framework for autonomous racing that combines reinforcement learning for high-performance trajectory planning with MPPI for safe and robust execution on real-world hardware.</description>
  <maintainer email="haiyuech@seas.upenn.edu">Haiyue Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>